logs/Slang/generated/keywords/5.6.2--keyword_genvar.sv.log
name: keyword_genvar
description: The 'genvar' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_genvar.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_genvar.sv:8:8: error: expected declarator
    bit genvar;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_genvar.sv:8:15: error: expected identifier
    bit genvar;
              ^
